// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`queries appends tag properties to query result 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
      {
        "name": "foo",
        "values": [
          "bar",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries applies query defaults when missing fields 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries current value for all data types 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "tag1",
        ],
      },
      {
        "name": "value",
        "values": [
          3,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "tag2",
        ],
      },
      {
        "name": "value",
        "values": [
          3.3,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "B",
  },
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "tag3",
        ],
      },
      {
        "name": "value",
        "values": [
          "foo",
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "C",
  },
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "tag4",
        ],
      },
      {
        "name": "value",
        "values": [
          "True",
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "D",
  },
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "tag5",
        ],
      },
      {
        "name": "value",
        "values": [
          2147483648,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "E",
  },
]
`;

exports[`queries handles null tag properties 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries handles tag with no current value 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          undefined,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          undefined,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries multiple current values with properties 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.1.tag",
          "my.2.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
          41.3,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
          "2023-10-04T00:00:00.000000Z",
        ],
      },
      {
        "name": "unit",
        "values": [
          "A",
          "A",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries multiple current values with different properties 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.1.tag",
          "my.2.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
          41.3,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
          "2023-10-04T00:00:00.000000Z",
        ],
      },
      {
        "name": "upperCriticalThreshold",
        "values": [
          "15",
          "",
        ],
      },
      {
        "name": "unit",
        "values": [
          "",
          "A",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries multiple targets - skips invalid queries 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag1",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag2",
        ],
      },
      {
        "name": "value",
        "values": [
          41.3,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "C",
  },
]
`;

exports[`queries numeric tag history 1`] = `
[
  {
    "fields": [
      {
        "name": "time",
        "type": "time",
        "values": [
          "2023-01-01T00:00:00Z",
          "2023-01-01T00:01:00Z",
        ],
      },
      {
        "config": {},
        "name": "my.tag",
        "values": [
          1,
          2,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries numeric multiple tags history 1`] = `
[
  {
    "fields": [
      {
        "name": "time",
        "type": "time",
        "values": [
          "2023-01-01T00:00:00Z",
          "2023-01-01T00:01:00Z",
          "2023-01-01T00:02:00Z",
        ],
      },
      {
        "config": {},
        "name": "my.tag.1",
        "values": [
          1,
          2,
          null,
        ],
      },
      {
        "config": {},
        "name": "my.tag.2",
        "values": [
          2,
          3,
          null,
        ],
      },
      {
        "config": {},
        "name": "my.tag.3",
        "values": [
          3,
          null,
          4,
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries replaces tag path with variable 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries string tag history 1`] = `
[
  {
    "fields": [
      {
        "name": "time",
        "type": "time",
        "values": [
          "2023-01-01T00:00:00Z",
          "2023-01-01T00:01:00Z",
        ],
      },
      {
        "config": {},
        "name": "my.tag",
        "values": [
          "3.14",
          "foo",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries supports legacy tag service property "datatype" 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries tag current value 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "my.tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;

exports[`queries uses displayName property 1`] = `
[
  {
    "fields": [
      {
        "name": "name",
        "values": [
          "My cool tag",
        ],
      },
      {
        "name": "value",
        "values": [
          3.14,
        ],
      },
      {
        "config": {
          "unit": "dateTimeFromNow",
        },
        "name": "updated",
        "type": "time",
        "values": [
          "2023-10-04T00:00:00.000000Z",
        ],
      },
    ],
    "refId": "A",
  },
]
`;
